<resources>
    <string name="app_name">CONTROL</string>
    <string name="telefono_celular">Telefono celular</string>
    <string name="email">Email</string>
    <string name="datos_de_la_persona">Datos de la persona</string>
    <string name="n_mero_documento">Número documento *</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos *</string>
    <string name="continuar">Continuar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ingrese_un_servidor">Servidor</string>
    <string name="ingrese_un_dominio">Dominio</string>
    <string name="c_dula_usuario">Cédula Usuario</string>
    <string name="c_digo_de_usuario">Código Usuario</string>
    <string name="autenticarme">Autenticarme</string>
    <string name="fjddesarrollodesoftware">fjddesarrollodesoftware</string>
    <string name="offline">NO TIENES ACCESO A INTERNET</string>
    <string name="save_success">Guardado correctamente</string>
    <string name="EMPTY_TABLES">NO TIENES INFORMACION PENDIENTE POR ENVIAR</string>
    <string name="seleccione">Seleccione…</string>
    <string name="ingrese_un_valor">Ingrese un valor</string>
    <string name="save_error">Error al guardar los datos</string>
    <string name="guardar">guardar</string>
    <string name="hintSearch">Ingrese una búsqueda</string>
    <string name="salir">Salir</string>
    <string name="ok">OK</string>
    <string name="ingrese_una_observaci_n">Ingrese una observación</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="camera">camera</string>
    <string name="pendientes">Ver Pendientes</string>
    <string name="enviar_informaci_n">Enviar Información</string>
    <string name="escanear_documento">Escanear Documento</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="scan">Scan</string>
    <string name="corregimiento">Corregimiento</string>
    <string name="barrio">Barrio</string>
    <string name="seleccione_departamento">Seleccione Corregimiento *</string>
    <string name="seleccione_barrio">Seleccione Barrio *</string>
    <string name="parametros">Parametros</string>
    <string name="registro_ya_existe">Registro ya existe!</string>
</resources>