<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/ingrese_una_observaci_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableEnd="@drawable/baseline_comment_dialog_24"
        android:inputType="textCapCharacters|textMultiLine"
        android:id="@+id/et_observacion_dialog"
        android:background="@drawable/box_text"/>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/danger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir" />
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>
   </LinearLayout>