<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:id="@+id/layout_inicio"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/scan_dni"
          android:text="@string/escanear_documento"
          style="?attr/materialButtonOutlinedStyle"
          android:drawableEnd="@drawable/baseline_document_scanner_24"/>
      <TextView
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/datos_de_la_persona"
          android:textSize="24sp"
          android:textColor="@color/text"
          android:textAlignment="center"
          android:textStyle="bold|italic"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
      <TextView
          android:layout_marginTop="20dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Hello World!"
          android:id="@+id/text_dni"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          tools:ignore="MissingConstraints">
          <EditText
              android:enabled="false"
              android:id="@+id/et_nombre"
              android:textColor="@color/text"
              android:hint="@string/nombres_y_apellidos"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          tools:ignore="MissingConstraints">
          <EditText
              android:enabled="false"
              android:id="@+id/et_documento"
              android:inputType="number"
              android:textColor="@color/text"
              android:hint="@string/n_mero_documento"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          app:boxStrokeColor="@color/stroke_color"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          tools:ignore="MissingConstraints">
          <EditText
              android:id="@+id/et_telefono"
              android:inputType="number"
              android:textColor="@color/text"
              android:hint="@string/telefono_celular"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:boxStrokeColor="@color/stroke_color"
          app:counterTextColor="@color/stroke_color"
          android:layout_marginTop="5dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          tools:ignore="MissingConstraints">
          <EditText
              android:id="@+id/et_email"
              android:inputType="textWebEmailAddress"
              android:hint="@string/email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:ignore="TextFields" />
      </com.google.android.material.textfield.TextInputLayout>

      <LinearLayout
          android:layout_marginTop="10dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <!--  <TextView
              android:text="@string/corregimiento"
              android:layout_width="wrap_content"
              android:labelFor="@id/tv_correg"
              android:layout_height="wrap_content"
              />-->
          <TextView
              android:id="@+id/tv_correg"
              android:layout_width="match_parent"
              android:text="@string/seleccione_departamento"
              android:layout_height="wrap_content"
              android:textColor="@color/text2"
              android:textSize="16sp"
              android:background="@drawable/box_text"
              app:drawableEndCompat="@drawable/ic_baseline_search_24_blue" />
      </LinearLayout>

      <LinearLayout
          android:layout_marginTop="10dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <!--<TextView
              android:text="@string/barrio"
              android:layout_width="wrap_content"
              android:labelFor="@id/tv_barrio"
              android:layout_height="wrap_content"
              />-->
          <TextView
              android:id="@+id/tv_barrio"
              android:layout_width="match_parent"
              android:text="@string/seleccione_barrio"
              android:textColor="@color/text2"
              android:textSize="16sp"
              android:layout_height="wrap_content"
              android:background="@drawable/box_text"
              app:drawableEndCompat="@drawable/ic_baseline_search_24_blue"/>
      </LinearLayout>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/btn_guardar"
          android:text="@string/guardar"
          android:layout_marginTop="50dp"
          style="?attr/materialButtonOutlinedStyle" />
  </LinearLayout>

</FrameLayout>