<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_auth"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.1"
            android:id="@+id/title_mode"
            android:textColor="@color/text2"
            android:fontFamily="sans-serif-black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_conelec_foreground" />


    </LinearLayout>
    <LinearLayout
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/text2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/iniciar_sesi_n"
                android:textAlignment="center"
                android:textSize="30sp" />
            <!--  Cuerpo  -->
            <com.google.android.material.textfield.TextInputLayout

                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_un_servidor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/servidor"
                    android:drawableEnd="@drawable/ic_baseline_add_to_queue_24"
                    android:inputType="textAutoComplete"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/ingrese_un_dominio"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/dominio"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_baseline_domain_24"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_dula_usuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/cc_auth"
                    android:inputType="number"
                    android:drawableEnd="@drawable/ic_baseline_person_pin_24"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_digo_de_usuario"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/cod_auth"
                    android:inputType="numberPassword"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <EditText
                android:drawableEnd="@drawable/ic_baseline_add_to_queue_24"
                android:padding="8dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:id="@+id/servidor2"
                android:paddingStart="20dp"
                android:background="@drawable/box_text"
                android:inputType="text"
                android:hint="@string/ingrese_un_servidor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:paddingStart="20dp"
                android:padding="8dp"
                android:visibility="gone"
                android:gravity="center"
                android:drawableEnd="@drawable/ic_baseline_domain_24"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_text"
                android:hint="@string/ingrese_un_dominio"
                android:id="@+id/dominio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <EditText
                android:visibility="gone"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_baseline_person_pin_24"
                android:paddingStart="20dp"
                android:hint="@string/c_dula_usuario"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/box_text"
                android:id="@+id/cc_auth2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:visibility="gone"
                android:padding="8dp"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_baseline_lock_person_24"
                android:paddingStart="20dp"
                android:gravity="center"
                android:background="@drawable/box_text"
                android:hint="@string/c_digo_de_usuario"
                android:id="@+id/cod_auth2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnAuth"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/iniciar_sesi_n"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>



    <TextView
        android:layout_gravity="bottom|center"
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:text="@string/fjddesarrollodesoftware"
        app:drawableStartCompat="@drawable/untitled_2" />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:backgroundTint="@color/danger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>